added things I want to know more about

--- a/301/301Read05.md
+++ b/301/301Read05.md
@@ -41,3 +41,7 @@ The second line of the function returns a new function. That new function takes 
 ## Q8 Explain how either map or reduce operates, with regards to higher-order functions.
 
 'Map' is a higher order function that takes in both an array and a callback function as arguements. It returns a new array, that is the same length as the original array, that is populated by the result of applying the callback function on each element of the array.
+
+## Things I want to know more about
+
+How to break up a mockup into components. I followed along with the example, but I feel like I would quickly get confused trying to do it myself.
