--- a/301/301Read06.md
+++ b/301/301Read06.md
@@ -40,6 +40,22 @@ A PUT method replaces information in another system
 
 A PATCH method partially updates information in another system
 
+### Geocoding API
+
+Did you get your API key? Yes
+
+### Weather Bit API
+
+Did you get your API key? Yes
+
+### Yelp API Docs
+
+Did you get your API key? Yes
+
+### The Movie DB API Docs
+
+Did you get your API key? Yes
+
 ## Things I want to know more about
 
 What are things that we have learned about that are NOT a part of the "RESTful" style?
