--- a/301/301Read07.md
+++ b/301/301Read07.md
@@ -1,61 +1,63 @@
-# Reading 7 - APIs
+# Reading 7 - Node.js
 
-[Source: API Best Design Practices](https://learn.microsoft.com/en-us/azure/architecture/best-practices/api-design)
+[Source: An Introduction to Node.js on sitepoint.com](https://www.sitepoint.com/an-introduction-to-node-js/)
 
-## Q1 What does REST stand for?
+## Q1 What is node.js?
 
-Representational State Transfer
+Node.js is a JavaScript runtime built on Chrome's V8 JavaScript engine. That is, it is a program that can be used to execute JavaScript on our computers.
 
-## Q2 REST APIs are designed around a ____.
+## Q2 In your own words, what is Chrome’s V8 JavaScript Engine?
 
-Resources (Any kind of object, data, or service that can be accessed by a client)
+Chrome's V8 JavaScript Engine is an open-source JS engine that was developed by Google that compiles JS straight to machine code directly.
 
-## Q3 What is an identifier of a resource? Give an example.
+## Q3 What does it mean that node is a JavaScript runtime?
 
-An identifier of a resource is a URI that uniquely identifies a resource.
+It means that Node.js is an environment where JavaScript can be run on the outside of a web browser.
 
-An example might be:
+## Q4 What is npm?
 
-https://adventure-works.com/orders/1
+Npm is a package manager that comes bundled with Node.
 
-## Q4 What are the most common HTTP verbs?
+## Q5 What version of node are you running on your machine?
 
-GET, POST, PUT, PATCH, and DELETE
+v20.5.1
 
-## Q5 What should the URIs be based on?
+## Q6 What version of npm are you running on your machine?
 
-The URIs should be based on nouns (the resource) as opposed to verbs (the operations on the resource)
+9.8.0
 
-## Q6 Give an example of a good URI.
+## Q7 What command would you type to install a library/package called ‘jshint’?
 
-https://adventure-works.com/orders
+npm install -g jshint
 
-## Q7 What does it mean to have a ‘chatty’ web API? Is this a good or a bad thing?
+## Q8 What is node used for?
 
-If a web API is "chatty", it requires multiple requests to perform a single tast. This is a bad thing because it leads to more API calls, which slows down the servers.
+Node is used for installing and running build tools designed to automate the process of developing a JavaScript application
 
-## Q8 What status code does a successful GET request return?
+[Source: 6 Reasons for Pair Programming](https://www.codefellows.org/blog/6-reasons-for-pair-programming/)
 
-200 (OK)
+## Q9 What are the 6 reasons for pair programming?
 
-## Q9 What status code does an unsuccessful GET request return?
+1. Greater efficiency
 
-404 (Not Found) if the resource cannot be located
+2. Engaged collaboration
 
-204 (No Content) if the request was fulfilled buy there is no response body included in the HTTP response (for example, a search request with no matches)
+3. Learning from fellow students
 
-## Q10 What status code does a successful POST request return?
+4. Social skills
 
-201 (Created) if it creates a new resource
+5. job interview readiness
 
-200 (OK) if it does some processing but does not create a new resource.
+6. Work environment readiness
 
-204 (No Content) if there is no result to return
+## Q10 In your experience, which of these reasons have you found most beneficial?
 
-## Q11 What status code does a successful DELETE request return?
+I would say the most beneficial would be learning from fellow students. Even if it's material I feel fairly confident on - but especially when it's material I don't feel confident on - I'm always learn new things I didn't know you can do when we pair program
 
-204 (No Content)
+## Q11 How does pair programming work?
+
+One person will be the Driver, whose job it is to type out the code. The other person is the Navigator, who instructs the Driver how the code should be written and reviews for errors.
 
 ## Things I want to learn more about
 
-What are APIs that are not considered RESTful, and what do these look like?
+How does axios and the other dependencies we've used fit into the larger picture? What, exactly, does each dependency do?
